force-app/main/default/objects/Krow__Project__c/fields/Krow__Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billable_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total project billable amount from all approved billable timesheets.</description>
    <inlineHelpText>Total project billable amount from all approved billable timesheets.</inlineHelpText>
    <label>Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>