force-app/main/default/objects/Krow__Project__c/fields/Krow__Total_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Cost_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total project cost amount from Approved Timesheet splits Cost Amount + Milestone Cost amount of Task</description>
    <inlineHelpText>Total project cost amount from Approved Timesheet splits Cost Amount + Milestone Cost amount of Task</inlineHelpText>
    <label>Total Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>