force-app/main/default/objects/Krow__Project__c/fields/Krow__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours__c</fullName>
    <description>The total approved timesheet hours for the project, including billable and non-billable hours.</description>
    <formula>Krow__Billable_Hours__c + Krow__Non_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total approved timesheet hours for the project, including billable and non-billable hours.</inlineHelpText>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>