force-app/main/default/objects/Krow__Project__c/fields/Krow__Total_Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours_Logged__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total saved timesheet hours for the project, including billable and non-billable hours.</description>
    <inlineHelpText>The total saved timesheet hours for the project, including billable and non-billable hours.</inlineHelpText>
    <label>Total Hours (Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>