force-app/main/default/objects/Krow__Project__c/fields/Krow__Total_Non_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Non_Billable_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total project non-billable amount from all approved timesheets.</description>
    <inlineHelpText>Total project non-billable amount from all approved timesheets.</inlineHelpText>
    <label>Non-Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>