force-app/main/default/objects/Krow__Project__c/fields/Krow__Total_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Planned_Hours__c</fullName>
    <label>Deprecated1</label>
    <summarizedField>Krow__Project_Assignment__c.Krow__Total_Task_Planned_Hours__c</summarizedField>
    <summaryForeignKey>Krow__Project_Assignment__c.Krow__Krow_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>