force-app/main/default/objects/Krow__Project__c/fields/Krow__Zendesksell_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Zendesksell_Deal_Id__c</fullName>
    <description>The Zendesk Sell Deal ID from Zendesk. Requires the Zendesk Sell integration to be configured.</description>
    <inlineHelpText>The Zendesk Sell Deal ID from Zendesk. Requires the Zendesk Sell integration to be configured.</inlineHelpText>
    <label>Zendesksell Deal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>