force-app/main/default/objects/Krow__Project__c/fields/Note_List_View__c.field-meta.xml
<CustomField>
    <fullName>Note_List_View__c</fullName>
    <label>Note (List View)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>