force-app/main/default/objects/Krow__Project__c/fields/Site_Profile__c.field-meta.xml
<CustomField>
    <fullName>Site_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Single Site Profile Auto Generated when Lead converts to Oppty</description>
    <inlineHelpText>Single Site Profile Auto Generated when Lead converts to Oppty</inlineHelpText>
    <label>SOW/Site Profile</label>
    <referenceTo>Site_Profile__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Klient_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>