force-app/main/default/objects/Krow__Project__c/fields/Slack_Channel_Link__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Link__c</fullName>
    <formula>IF( ISBLANK(Opportunity__r.Link_to_Slack_Channel__c), &quot;No Opportunity Relation&quot;, Opportunity__r.Link_to_Slack_Channel__c)</formula>
    <label>Slack Channel Link</label>
    <type>Text</type>
</CustomField>