force-app/main/default/objects/Krow__Project__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>TrackIT__Work_Order__c</referenceTo>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>