force-app/main/default/objects/Krow__Project__c/recordTypes/Hiring.recordType-meta.xml
<RecordType>
    <fullName>Hiring</fullName>
    <active>true</active>
    <label>Hiring</label>
</RecordType>