force-app/main/default/objects/Krow__Project__c/recordTypes/Purchase.recordType-meta.xml
<RecordType>
    <fullName>Purchase</fullName>
    <active>true</active>
    <label>Purchase</label>
</RecordType>