force-app/main/default/objects/Krow__Project__c/recordTypes/Repair_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Repair_Work_Order</fullName>
    <active>true</active>
    <label>Repair_Work Order</label>
</RecordType>