force-app/main/default/objects/Krow__Project__c/validationRules/Krow__Archived_field_can_change_project_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Archived_field_can_change_project_owner</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Krow__Archived__c),OwnerId &lt;&gt; $User.Id,$Setup.Krow__Krow_User_Configuration__c.Krow__Project_Admin__c = false)</errorConditionFormula>
    <errorMessage>Archived can change by project owner</errorMessage>
</ValidationRule>