force-app/main/default/objects/Krow__Project__c/validationRules/Krow__Percentage_must_be_within_range_0_to_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Percentage_must_be_within_range_0_to_100</fullName>
    <active>true</active>
    <description>Percentage complete must be within range 0 to 100.</description>
    <errorConditionFormula>Krow__Project_Complete__c &lt; 0.0 || Krow__Project_Complete__c &gt; 1.0</errorConditionFormula>
    <errorDisplayField>Krow__Project_Complete__c</errorDisplayField>
    <errorMessage>Percentage complete must be within range 0 to 100.</errorMessage>
</ValidationRule>