force-app/main/default/objects/Krow__Project__c/validationRules/Krow__Project_Start_Date_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Project_Start_Date_Is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Krow__Project_Start_Date__c)</errorConditionFormula>
    <errorMessage>Project start date is required.</errorMessage>
</ValidationRule>