force-app/main/default/objects/Krow__Project__c/listViews/Active_Projects.listView-meta.xml
<ListView>
    <fullName>Active_Projects</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Krow__Account__c</columns>
    <columns>Site_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Status__c</field>
        <operation>notContain</operation>
        <value>Complete,Canceled,Position Filled,Unrepairable</value>
    </filters>
    <filters>
        <field>Krow__Task_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Krow__Project__c.Job</value>
    </filters>
    <filters>
        <field>Krow__Public_Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Lead,Cold Lead</value>
    </filters>
    <label>Projects Kanban</label>
</ListView>