force-app/main/default/objects/Krow__Project__c/listViews/Final_Billing.listView-meta.xml
<ListView>
    <fullName>Final_Billing</fullName>
    <columns>NAME</columns>
    <columns>Krow__Project_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Project_Status__c</field>
        <operation>equals</operation>
        <value>FinalBilling</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Krow__Project__c.Job</value>
    </filters>
    <filters>
        <field>Krow__Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Task_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Public_Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Final Billing</label>
</ListView>