force-app/main/default/objects/Krow__Project__c/listViews/Job_Projects.listView-meta.xml
<ListView>
    <fullName>Job_Projects</fullName>
    <columns>Krow__Project_Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Project_Status__c</field>
        <operation>equals</operation>
        <value>Unscheduled Job,Scheduled Job,Active Job,FinalBilling</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Krow__Project__c.Job</value>
    </filters>
    <filters>
        <field>Krow__Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Task_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Public_Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Jobs</label>
</ListView>