force-app/main/default/objects/Krow__Project__c/listViews/Job_Templates.listView-meta.xml
<ListView>
    <fullName>Job_Templates</fullName>
    <booleanFilter>1 AND (2 OR 4) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Krow__Project_Status__c</columns>
    <columns>Krow__Task_Template__c</columns>
    <columns>Krow__Project_Template__c</columns>
    <columns>Krow__Include_in_Utilization__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Task_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Krow__Project__c.Job</value>
    </filters>
    <filters>
        <field>Krow__Public_Project_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>X_Project Templates</label>
</ListView>