force-app/main/default/objects/Krow__Project__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Krow__Account__c</columns>
    <columns>Krow__Project_Start_Date__c</columns>
    <columns>Krow__Project_End_Date__c</columns>
    <columns>Krow__Project_Type__c</columns>
    <columns>Krow__Project_Status__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Krow__Project_Template__c</columns>
    <columns>Krow__Task_Template__c</columns>
    <columns>Krow__Global_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>