force-app/main/default/objects/Krow__Project__c/listViews/Krow__Completed.listView-meta.xml
<ListView>
    <fullName>Krow__Completed</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Krow__Project_Start_Date__c</columns>
    <columns>Krow__Project_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Krow__Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Project_Status__c</field>
        <operation>contains</operation>
        <value>Complete,Position Filled</value>
    </filters>
    <filters>
        <field>Krow__Task_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Public_Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Completed</label>
</ListView>