force-app/main/default/objects/Krow__Project__c/listViews/Lead_Projects.listView-meta.xml
<ListView>
    <fullName>Lead_Projects</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Krow__Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Project_Status__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Krow__Project__c.Job</value>
    </filters>
    <filters>
        <field>Krow__Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Task_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Krow__Public_Project_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Lead Projects</label>
</ListView>